--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,6 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  overflow: hidden;
 }
 
 img {
@@ -232,10 +231,9 @@ select::-ms-expand {
   user-select: none;
   height: auto;
   border: none;
-  height: 25px;
   color: #fff;
   border: 1px solid #5cccf5;
-  padding: 2px 8px;
+  padding: 4px 8px;
   font-size: 13px;
   border-radius: 4px;
   margin-bottom: 0;
@@ -1720,12 +1718,8 @@ header.sticky-top {
   left: -18px;
 }
 
-.main.paddingLeftabAbov60 {
-  padding-left: 322
-}
-
-.main.paddingLeftabBelow60 {
-  padding-left: 56px;
+.main.push-left {
+  padding-left: 278px;
 }
 
 .sidebar .checkbox-normal .checkbox-custom:checked+.checkbox-custom-label:before {
@@ -2039,19 +2033,6 @@ header.sticky-top {
   border: solid 1px #999;
 }
 
-.network-filter-popup .filter-popup li .checkbox label:before {
-  width: 18px;
-  height: 18px;
-  padding: 0;
-  border-radius: 4px;
-  margin-right: 5px;
-  top: 0;
-}
-
-.network-filter-popup .filter-popup li .checkbox input[type="checkbox"]:checked+label:after {
-  left: 2px;
-}
-
 .network-filter-popup .filter-popup li .checkbox span {
   position: relative;
   top: 1px;
@@ -2060,19 +2041,65 @@ header.sticky-top {
 .network-filter-popup .filter-popup .filter-in-letters a {
   color: #000;
   font-weight: 600;
+  cursor: pointer;
+  float: none;
+  display: inline-block;
 }
 
-.network-filter-popup .filter-popup .filter-in-letters a:hover {
-  color: #fff;
-}
-
-.network-filter-popup .filter-popup .filter-in-letters a.ln-selected {
+.network-filter-popup .filter-popup .filter-in-letters a.ln-selected, .network-filter-popup .filter-popup .filter-in-letters a:hover {
   color: #fff;
 }
 
 .network-filter-popup .filter-popup .network-filter-bottom .dpi-newnetwork a {
   color: #000;
-  font-size: 12px;
+  font-size: 14px;
+  line-height: 15px;
+  display: flex;
+  align-items: center;
+  margin-right: 50px; 
+}
+
+.network-filter-popup .filter-popup .network-filter-bottom .dpi-newnetwork a span {
+  margin-right: 5px;
+}
+
+.network-filter-popup .filter-popup .network-filter-bottom .new-link {
+  text-decoration: none;
+}
+
+.network-filter-popup .filter-popup .new-symbol {
+  color: #fff;
+    border-radius: 4px;
+    font-size: 9.5px;
+    text-align: center;
+    font-weight: 600;
+    line-height: 14px;
+    margin-left: 5px;
+    font-style: italic;
+    text-decoration: none;
+}
+
+.dpi-symbol {
+  display: inline-block;
+}
+
+.ota {
+  display: inline-block;
+  color: #fff;
+  background: #035687;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 4px;
+  line-height: 14px;
+  letter-spacing: 0.7px;
+  width: 30px;
+  height: 13px;
+  margin-left: 4px;
+}
+
+.new-symbol img {
+  width: 16px;
 }
 
 .network-filter-popup .filter-popup .network-filter-bottom .digi-symbol {
@@ -2083,20 +2110,6 @@ header.sticky-top {
   height: 13px;
   position: relative;
   top: 2px;
-}
-
-.network-filter-popup .filter-popup .digi-symbol {
-  width: 25px;
-  background: #ff9d40;
-  color: #fff;
-  border-radius: 4px;
-  font-size: 9.5px;
-  text-align: center;
-  font-weight: 600;
-  line-height: 14px;
-  margin-left: 5px;
-  font-style: italic;
-  padding-right: 2px;
 }
 
 .network-filter-popup .filter-popup .rate-review-request {
@@ -2154,9 +2167,11 @@ header.sticky-top {
 
 .filter-popup .filter-in-letters a {
   color: #fff;
-  font-size: 16px;
-  padding: 4px 6px;
+  font-size: 18px;
+  line-height: normal;
+  padding: 4px 12px;
   border: none;
+  margin: 0 1px;
 }
 
 .filter-popup .filter-in-letters a:nth-child(n+2) {
@@ -2169,21 +2184,29 @@ header.sticky-top {
 
 .filter-popup .ln-selected {
   background-color: #00beff;
+  cursor: pointer;
+}
+
+.network-filter-popup .filter-popup .filter-in-letters a.ln-disabled {
+  color: #848484;
+  background: #eaeaea;
+  cursor: not-allowed;
 }
 
 .filter-popup .networklist {
   width: 100%;
   overflow: hidden;
-  max-height: 400px;
+  height: 325px;
   overflow-y: auto;
   margin-bottom: 20px;
-  flex-flow: wrap row;
+  display: block;
+  align-items: self-start;
 }
 
 .filter-popup .networklist li {
-  max-width: 275px;
-  float: left;
-  margin: 6px 8px;
+  max-width: 282px;
+  display: inline-block;
+  margin: 8px 8px;
   width: 100%;
   margin-left: 0;
 }
@@ -2191,18 +2214,13 @@ header.sticky-top {
 .filter-popup .networklist li label {
   font-size: 14px;
   margin-bottom: 0;
+  display: inline-flex;
+  color: #000;
 }
 
 .filter-popup .network-filter-bottom {
   margin: 25px 0 0;
   flex-flow: wrap row;
-}
-
-.filter-popup .network-filter-bottom .dpi-symbol {
-  display: inline-block;
-  width: 25px;
-  margin-right: 5px;
-  line-height: 14px;
 }
 
 .filter-popup .network-filter-bottom .new-network-label {
@@ -2241,19 +2259,24 @@ header.sticky-top {
 }
 
 .dpi-symbol {
-  position: relative;
-  top: -1px;
-  left: 4px;
+  display: inline-block;
 }
 
 .dpi-symbol img {
-  width: 32px;
+  width: 35px;
+}
+
+.filter-popup .network-filter-bottom .dpi-newnetwork {
+  color: #fff;
+  align-items: center;
+  line-height: 16px;
 }
 
 .network-page {
   position: relative;
   margin: 20px auto;
   max-width: 1200px;
+  padding-bottom: 100px;
 }
 
 .network-page .filter-popup {
@@ -2274,6 +2297,7 @@ header.sticky-top {
 
 .network-page .network-filter ul {
   position: relative;
+  flex-flow: wrap row;
 }
 
 .network-page .network-filter ul li h5 {
@@ -2288,9 +2312,15 @@ header.sticky-top {
 
 .network-page .network-filter ul li .checkbox {
   width: auto;
+  display: inline-block;
+  vertical-align: middle;
 }
 
-.network-page .network-filter ul li .search-container {
+.network-page .network-filter ul li .network-search-container .open-filter-popup i {
+  margin-left: 15px;
+}
+
+.network-page .network-filter ul li .network-search-container {
   position: absolute;
   right: 0;
   top: 0;
@@ -2298,13 +2328,9 @@ header.sticky-top {
   align-items: center;
 }
 
-.network-page .network-filter ul li .search-container .open-filter-popup {
+.network-page .network-filter ul li .network-search-container .open-filter-popup {
   padding: 0 15px;
   cursor: pointer;
-}
-
-.network-page .network-filter ul li .search-container .open-filter-popup i {
-  margin-left: 15px;
 }
 
 .network-page .networklist {
@@ -2314,18 +2340,10 @@ header.sticky-top {
 }
 
 .network-page .networklist li {
-  max-width: 275px;
-  margin: 2px 8px;
-  width: 100%;
-  white-space: nowrap;
+  max-width: 280px;
 }
-
-.network-page .networklist li label {
-  padding: 6px 0;
-}
-
-.network-page .networklist li .checkbox input[type="checkbox"]:checked+label:after {
-  top: 5px;
+.network-page .network-filter ul.scrollbar {
+  height: 450px;
 }
 
 #gridoverlay {
@@ -3716,7 +3734,6 @@ header.sticky-top {
 
 .ui-grid-row {
   height: auto !important;
-  display: table-row;
   position: static;
 }
 
@@ -4112,11 +4129,29 @@ header.sticky-top {
     align-items: flex-end;
     padding-bottom: 8px;
   }
+  .network-filter-popup .filter-popup .filter-in-letters a {
+    margin: 1px;
+  }
+  
+  .network-page .network-filter {
+    margin: 0 10px;
+  }
 }
 
 @media (max-width: 992px) {
   .border-r-desktop {
     border-right: none;
+  }
+  .filter-popup ul li {
+    display: flex;
+    align-items: center;
+    margin: 6px 8px;
+  }
+  .network-page .network-filter ul li .network-search-container {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
   }
 }
 
@@ -4284,13 +4319,17 @@ header.sticky-top {
     overflow-x: hidden;
     padding-bottom: 72px;
   }
+
   .network-filter-popup .filter-popup .network-filter-bottom .dpi-newnetwork {
-    margin-bottom: 5px;
+    margin-bottom: 0;
+    flex-flow: wrap;
   }
-  .filter-popup .network-filter-bottom .dpi-newnetwork {
-    width: 100%;
-    justify-content: center;
+
+  .network-filter-popup .filter-popup .network-filter-bottom .dpi-newnetwork a {
+    margin-bottom: 10px;
+    margin-right: 0;
   }
+ 
   .filter-popup .network-filter-bottom .btn-grp {
     margin: 10px 0;
     justify-content: center;
@@ -4375,6 +4414,16 @@ header.sticky-top {
   .inner-right img {
     max-width: 50%;
     margin-top: 60px;
+  }
+  .filter-popup .filter-in-letters a {
+    font-size: 14px;
+    padding: 4px 8px;
+  }
+  .filter-popup .networklist li {
+    margin: 4px 8px;
+  }
+  .network-page .network-filter ul li .network-search-container .open-filter-popup {
+    padding-left: 0;
   }
 }
 
