Ranking Tab multiple sorting and download excel button-34

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -98,6 +98,7 @@
                 </ul>
             </div>
         </div>
+        <button ng-click="downloadCSV()">Download CSV</button>
         <div id="grid1" ui-grid="gridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination ui-grid-grouping class="grid"></div>
     </main>
 </div>
