--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -23,8 +23,8 @@
                 </div> 
                 </li>                
             <li>
-                <a href="" class="filter-listing"  ng-click="call_filter_list();">
-                    Filters <i class="fa fa-caret-down fa-lg downarrow-icon"></i>
+                <a href="" class="filter-listing dropdown-arrow"  ng-click="call_filter_list();">
+                    Filters
                 </a>
             </li>
             <li>
