ui for super admin

--- a/templates/modals/addAdmin.html
+++ b/templates/modals/addAdmin.html
@@ -5,7 +5,7 @@
     </button>
 </div>
 <div class="modal-body">
-    <form name="admin.add_company" id="add_company" novalidate="" ng-submit="saveCompany()">
+    <form name="admin.add_company" id="add_company" novalidate="" ng-submit="saveCompany()" class="super-admin-popup">
         <span class="color-red mb-3 d-block">Note: Fields marked as * are mandatory.</span>
         <h5>Company Information</h5>
         <ul>
@@ -87,7 +87,7 @@
                 </div>
             </li>
             <li>
-                <label>Domain Override</label>
+                <label>Domain Override11</label>
                 <div class=" Admin Informationent">
                     <ul class="no-bullet" style="background:none;">
                         <li>
