--- a/templates/modals/advancedCompanyModalEdit.html
+++ b/templates/modals/advancedCompanyModalEdit.html
@@ -5,7 +5,7 @@
     </button>
 </div>
 <div class="modal-body">
-    <form name="edit_company" id="edit_company" novalidate="">
+    <form name="edit_company" id="edit_company" novalidate="" class="super-admin-popup">
         <span class="color-red mb-3 d-block">Note: Fields marked as * are mandatory.</span>
         <h5>Company Information</h5>
         <ul>
