--- a/templates/modals/advancedModalAddUser.html
+++ b/templates/modals/advancedModalAddUser.html
@@ -5,7 +5,7 @@
     </button>
 </div>
 <div class="modal-body">
-    <form name="admin.add_user_under_company" id="add_user_under_company" novalidate="" ng-submit="addUserInCompany()">
+    <form name="admin.add_user_under_company" id="add_user_under_company" novalidate="" ng-submit="addUserInCompany()" class="super-admin-popup">
         <span class="color-red mb-3 d-block">Note: Fields marked as * are mandatory.</span>
         <ul>
             <li>
