--- a/templates/modals/advancedModalChangeAdmin.html
+++ b/templates/modals/advancedModalChangeAdmin.html
@@ -5,7 +5,7 @@
     </button>
 </div>
 <div class="modal-body">
-    <form name="admin.change_admin" id="change_admin" novalidate="" ng-submit="changeAdminOfCompany()">
+    <form name="admin.change_admin" id="change_admin" novalidate="" ng-submit="changeAdminOfCompany()" class="super-admin-popup">
         <input type="hidden" id="company_id" name="company_id" ng-model="admin.company_id" />
         <span class="color-red mb-3 d-block">Note: Fields marked as * are mandatory.</span>
         <h5>User Information</h5>
