--- a/templates/modals/advancedModalDeleteUser.html
+++ b/templates/modals/advancedModalDeleteUser.html
@@ -5,7 +5,7 @@
     </button>
 </div>
 <div class="modal-body">
-    <form name="admin.delete_user_under_company" id="delete_user_under_company" novalidate="">
+    <form name="admin.delete_user_under_company" id="delete_user_under_company" novalidate="" class="super-admin-popup">
         <span class="color-red mb-3 d-block">Note: Fields marked as * are mandatory.</span>
         <h5>User Information</h5>
         <input type="hidden" id="company_admin_id" name="company_admin_id" ng-model="admin.company_admin_id" />
