--- a/templates/adminConsole.html
+++ b/templates/adminConsole.html
@@ -17,31 +17,37 @@
     </div>
 
     <div class="black-top-menu">
-        <nav class="user-menu-icons d-flex justify-content-between align-items-center">
-            <span class="welcome-text">Welcome, {{admin.complete_name}}</span>
-            <ul class="d-flex justify-content-between align-items-center">
-                <li class="mr-3">
-                    <button class="btn btn-blue" ng-click="openAddCompany()"><img class="help"
-                            src="./assets/images/add-user.svg">Add New Company</button>
-                </li>
-                <li class="mr-2 export-link-list">
-                    <button class="btn btn-blue" ng-click="retailReportBox();">
-                        <img class="help" src="assets/images/download.svg">Retail Report
-                    </button>
+        <nav class="user-menu-icons d-flex justify-content-between align-items-center w-100">
+            <span class="welcome-text ng-binding">Welcome, Abhishek Sable</span>
+            <ul>
+                <li>
+                    <button class="btn btn-blue" ng-click="export()"><img class="help" src="./assets/images/download.svg">Excel</button>
                 </li>
             </ul>
         </nav>
     </div>
-    <div class="top-grid-filter">
-        <div class="network">
-            <div class="search-input">
-                <span class="search-icon">
-                    <i data-feather="search"></i>
-                </span>
-                <input type="search" placeholder="Search Company" ng-model="ranking.searchText" ng-keyup="filterGridWithSearchText()">
-            </div>
-        </div>
-    </div>
+
+    <div class="user-grid-filter">
+        <ul>
+            <li>
+                <div class="search-input">
+                    <span class="search-icon">
+                        <img src="./assets/images/search-icon-10.svg" id="magnifying_glass">
+                    </span>
+                    <input type="text" placeholder="Search User" ng-model="ranking.searchText" ng-keyup="filterGridWithSearchText()" class="ng-pristine ng-valid ng-empty ng-touched">
+                    <span class="search-icon clear-search-icon ng-hide" ng-click="clearFilterInput('ranking')" ng-hide="ranking.searchText.length == 0">
+                        <i class="fa fa-times-circle" title="Clear Search"></i>
+                    </span>                        
+                </div>
+            </li>
+            <li>
+                <button class="btn btn-blue" ng-click="openAddCompany()">
+                    <img class="help" src="./assets/images/add-user.svg">Add New User
+                </button>
+            </li>            
+        </ul>
+     </div>
+     
     <div id="gridAdmin" ui-grid="gridOptionsAdmin" ui-grid-exporter ui-grid-pagination ui-grid-resize-columns
         ui-grid-move-columns class="grid"></div>
 </div>
