--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -1,6 +1,6 @@
 <div class="common-menu">
     <!-- black-top menu -->
-    <div class="black-top-menu" ng-init="showTab('brands')" ng-show="headerDisplay == 1">
+    <div class="black-top-menu" ng-init="showTab('advertisers')" ng-show="headerDisplay == 1">
         <ul class="left-menu">
             <li>Welcome {{complete_name}},</li>
             <li ng-class="{'active-alert' : type == 'brands'}">
@@ -98,9 +98,11 @@
                 </ul>
             </div>
         </div>
-        <button ng-click="downloadCSV()">Download CSV</button>
+        <!-- <button ng-click="downloadCSV()">Download CSV</button>
+         <div ng-click="gridApi.grid.gridMenuScope.toggleMenu()">Menu</div> -->
         <div id="grid1" ui-grid="gridOptions" ui-grid-exporter ui-grid-expandable ui-grid-selection ui-grid-pagination ui-grid-grouping class="grid"></div>
     </main>
 </div>
 
 <div class="" ng-include="'templates/airingDetail.html'"></div>
+<div class="" ng-include="'templates/advertiserDetail.html'"></div>
