Advertiser details page UI grid and subgrid - 36

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -1,6 +1,6 @@
 <div class="common-menu">
     <!-- black-top menu -->
-    <div class="black-top-menu" ng-init="showTab('advertisers')" ng-show="headerDisplay == 1">
+    <div class="black-top-menu" ng-init="showTab('brands')" ng-show="headerDisplay == 1">
         <ul class="left-menu">
             <li>Welcome {{complete_name}},</li>
             <li ng-class="{'active-alert' : type == 'brands'}">
